# wit-bindgen-go-template

./: .gitignore  Cargo.toml  Makefile  README.md  gen_main.rs
.devcontainer/: Dockerfile  devcontainer.json
app/: main.go
app-js/: app.js  package-lock.json  package.json
app-rust/: Cargo.toml
app-rust/src/: lib.rs
artifacts/: wasi_snapshot_preview1.wasm
src/: main.rs
