[package]
name = "app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { git = "https://github.com/mossaka/wit-bindgen", rev = "b00661f8cd4604518b74efa9dbd88a5195b205d7" }

[workspace]