[package]
name = "app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.4.0", features = ["realloc"], default-features = false }

[package.metadata.component.target]
path = "../wit"

[package.metadata.component.dependencies]

[workspace]